server-core/src/main/java/io/onedev/server/web/asset/bootstrap/css/bootstrap-custom.css
/* ... */
.separator.separator-primary {
    border-bottom-color: var(--primary);
}
.separator.separator-secondary {
    border-bottom-color: var(--secondary);
}
.separator.separator-success {
    border-bottom-color: var(--success);
}
.separator.separator-danger {
    border-bottom-color: var(--danger);
}
.separator.separator-warning {
    border-bottom-color: var(--warning);
}
.separator.separator-info {
    border-bottom-color: var(--info);
}
.separator.separator-dark {
    border-bottom-color: var(--dark);
}

.dropdown-menu {
    min-width: 10rem;
    padding: 0.5rem 0;
    margin: 0.125rem 0 0;
    color: var(--gray-dark);
    border: 0 solid rgba(0, 0, 0, 0.15);
    border-radius: 0.42rem;
    box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.1);
}
.dark-mode .dropdown-menu {
	border: 1px solid var(--dark-mode-light-dark);
	background: var(--dark-mode-dark);
	box-shadow: 0 0 30px rgb(0 0 0 / 50%);	
}
.dropdown-item {
    padding: 0.75rem 1.25rem;
    color: var(--dark);
}
.dark-mode .dropdown-item {
	color: var(--dark-mode-gray);
}
.dropdown-item:hover, .dropdown-item:focus {
	color: #101221;
    background-color: var(--light);
}
.dark-mode .dropdown-item:hover, .dark-mode .dropdown-item:focus {
    background-color: var(--dark-mode-light-primary);
    color: #3699ff;	
}
.dropdown-item.active, .dropdown-item:active {
    color: #ffffff;
    text-decoration: none;
    background-color: var(--primary);
}
.dark-mode .dropdown-item.active, .dark-mode .dropdown-item:active {
    background-color: var(--dark-mode-light-primary);
    color: #3699ff;	
}
.dropdown-divider {
    border-top: 1px solid var(--light-gray);
}
.dark-mode .dropdown-divider {
    border-top: 1px solid var(--dark-mode-light-dark);
}

.progress {
    font-size: 0.75rem;
    background-color: var(--light-gray);
    border-radius: 0.42rem;
    box-shadow: none;
}
.dark-mode .progress {
    background-color: var(--dark-mode-lighter-dark);
}
.progress-bar {
    background-color: var(--primary);
}
.alert {
    padding: 1rem 1.2rem;
    border: 1px solid transparent;
    border-radius: 0.42rem;
}
.alert.alert-primary {
    background-color: var(--primary);
    border-color: var(--primary);
    color: white;
}
.alert.alert-secondary {
    background-color: var(--secondary);
    border-color: var(--secondary);
    color: var(--gray-dark);
}
.dark-mode .alert.alert-secondary {
    border-color: #323248;
    background-color: #323248;	
	color: white;
}
.alert.alert-success {
    background-color: var(--success);
    border-color: var(--success);
    color: white;
}
.alert.alert-danger {
    background-color: var(--danger);
    border-color: var(--danger);
    color: white;
}
.alert.alert-info {
    background-color: var(--info);
    border-color: var(--info);
    color: white;
}
.alert.alert-warning {
    background-color: var(--warning);
    border-color: var(--warning);
    color: white;
}
.alert.alert-dark {
    background-color: var(--dark);
    border-color: var(--dark);
    color: white;
}
.alert.alert-light {
    background-color: var(--light);
    border-color: var(--light);
    color: var(--gray);
}
.dark-mode .alert.alert-light {
    border-color: #323248;
    background-color: #323248;	
	color: var(--dark-mode-gray);
}
.alert.alert-light-primary {
    background-color: var(--light-primary);
	color: var(--primary);
	border-color: transparent;
}
.dark-mode .alert.alert-light-primary {
	background-color: var(--dark-mode-light-primary);
}
.alert.alert-light-success {
    background-color: var(--light-success);
	color: var(--success);
	border-color: transparent;
}
.dark-mode .alert.alert-light-success {
	background-color: #1c3238;
}
.alert.alert-light-danger {
    background-color: var(--light-danger);
	color: var(--danger);
	border-color: transparent;
}
.dark-mode .alert.alert-light-danger {
	background-color: #3a2434;	
}
.alert.alert-light-warning {
    background-color: var(--light-warning);
	color: var(--warning);
	border-color: transparent;
}
.dark-mode .alert.alert-light-warning {
	background-color: #392f28;	
}
.alert.alert-light-dark {
    background-color: var(--light-dark);
	color: var(--dark);
	border-color: transparent;
}
.alert.alert-light-info {
    background-color: var(--light-info);
	color: var(--info);
	border-color: transparent;
}
.dark-mode .alert.alert-light-info {
	background-color: #2f264f;
}

.alert-link {
    font-weight: 500;
}
.alert-primary .alert-link {
    color: #13375b;
}
.alert-secondary .alert-link {
    color: #5e5f62;
}
.alert-success .alert-link {
    color: #083937;
}
.alert-danger .alert-link {
    color: #591d23;
}
.alert-warning .alert-link {
    color: #523600;
}
.alert-info .alert-link {
    color: #321e5c;
}
.alert-light .alert-link {
    color: #656667;
}
.alert-dark .alert-link {
    color: var(--gray);
}

.alert.alert-notice {
	border: 0;
    border-left: 4px solid;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
}
.dark-mode .alert.alert-notice {
    border-left: 4px solid;
}
.alert.alert-white {
    background-color: white;
    border-color: white;
}

.shadow {
	box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.1) !important;
}
.dark-mode .shadow {
	box-shadow: 0 0 30px rgb(0 0 0 / 50%) !important;	
}

.popover {
    font-family: Poppins, Helvetica, "sans-serif";
    font-size: 0.9rem;
    background-color: white;
    border: 1px solid white;
    border-radius: 0.42rem;
    box-shadow: 0px 0px 8px 2px rgba(0,0,0,0.1);
}
.dark-mode .popover {
    background-color: var(--dark-mode-dark);
    border-color: var(--dark-mode-dark);
	box-shadow: 0 0 30px rgb(0 0 0 / 50%);	
}
.bs-popover-auto[x-placement^=right]>.arrow::before, .bs-popover-right>.arrow::before {
    border-right-color: white;
}
.bs-popover-auto[x-placement^=left]>.arrow::before, .bs-popover-left>.arrow::before {
    border-left-color: white;
}
.bs-popover-auto[x-placement^=top]>.arrow::before, .bs-popover-top>.arrow::before {
    border-top-color: white;
}
/* ... */

